# QuantumLearningWorkspace

./: .env.example  .gitignore  README.md  StudyMind AI-Quiz-Generator Structure .docx
.github/workflows/: chatbot.yml
ai-ml/embedding/: chunker.py  config.py  embedder.py  model.py  requirements.txt  vector_store.py
ai-ml/embeddings/: config.py  embedder.py  model.py  schema.py  vector_store.py
chatbot/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
chatbot/memory/: conversational_rag.py
chatbot/rag-engine/: .env.example  basic_call_llm.py  basic_retrieval.py  cache.py  chunked_retrieval.py  chunker.py  main.py  rag_service.py  rate_limiter.py  schemas.py  timing_logger.py  vector_store.py
chatbot/rag-engine/data/: conflict_notes.txt  injection_sample.txt  photosynthesis_overview.txt  youtube_lecture_energy.txt
chatbot/rag-engine/eval/: cases.json  eval_suite.py
chatbot/rag-engine/scripts/: stream_client.py
chatbot/rag-engine/tests/: test_api.py  test_cache.py  test_multi_hop.py  test_rate_limiter.py  test_relevance.py  test_rewrite_grounding.py  test_timing.py
docs/: api-contracts.md  architecture.md
web/backend/: auth_utils.py  database.py  main.py  models.py  requirements.txt
web/frontend/src/: App.jsx
