[project]
name = "studymind-chatbot"
version = "0.5.0"
description = "Team Mu RAG chatbot service for StudyMind AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "chromadb>=0.5.0,<1.0.0",
  "sentence-transformers>=3.0.0,<4.0.0",
  "groq>=0.11.0,<1.0.0",
  "python-dotenv>=1.0.0,<2.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.32.0,<1.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "redis>=5.0.0,<6.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["rag-engine/tests"]
pythonpath = ["rag-engine"]
